--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@
   margin-right: auto; }
 
 body {
-  background-color: lightgray; }
+  background-color: #936B63; }
 
 .giantButton {
   cursor: hoover;
-  background-color: #FF5733;
+  background-color: red;
   border-radius: 50px/50px;
   height: 100px;
   width: 300px;
@@ -27,4 +27,5 @@ input {
 .smallButton {
   margin-top: 25px;
   height: 50px;
-  width: 300px; }
+  width: 300px;
+  color: white; }
