--- a/styles.scss
+++ b/styles.scss
@@ -3,11 +3,13 @@
   margin-right: auto;
 }
   body{
-  background-color: gray;
+  background-color: #936B63;
 }
+
+
 .giantButton{
   cursor: hoover;
-  background-color: #FF5733;
+  background-color: red;
   border-radius: 50px/50px;
   height:100px;
   width:300px;
@@ -28,5 +30,5 @@ width:300px;
   margin-top: 25px;
   height:50px;
   width:300px;
+  color:white;
 }
-]
