--- a/styles.scss
+++ b/styles.scss
@@ -1,25 +1,49 @@
+@keyframes blink {
+       0% {
+           background: rgba(255,0,0,0.5);
+       }
+
+       50% {
+           background: rgba(255,0,0,0);
+       }
+
+       100% {
+           background: rgba(255,0,0,0.5);
+       }
+     }
+
 *{
   margin-left: auto;
   margin-right: auto;
 }
   body{
-  background-color: #936B63;
+  background-image: url('uncensored.jpg');
+  background-repeat: no-repeat;
+  background-size:cover;
 }
 
 
 .giantButton{
-  cursor: hoover;
-  background-color: red;
+  margin-bottom: 25px;
+  font-size: 30px;
+  background-color: gray;
   border-radius: 50px/50px;
   height:100px;
   width:300px;
-  color:white;
+  color: black;
+  cursor: hoover;
+  animation: blink 1s steps(5, start) infinite;
+
 }
+
 #wrapper{
-display: block;
 align-content: center;
+width:400px;
+height:400px;
+display:inline-block;
 padding-left: 300px;
-padding-right: 200px;
+padding-right: 300px;
+margin-top: 0 auto;
 }
 input{
 margin-top: 25px;
@@ -31,4 +55,16 @@ width:300px;
   height:50px;
   width:300px;
   color:white;
+}
+h1{
+  font-size: 40px;
+  text-align: center;
+  font-weight: bolder;
+  font-style: oblique;
+}
+.logo{
+  width:10%;
+  height:100px;
+  float:left;
+
 }
