--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,26 @@
-@keyframes blink {
+@keyframes pulse {
   0% {
-    background: rgba(255, 0, 0, 0.5); }
-  50% {
-    background: rgba(255, 0, 0, 0); }
+    background-color: white; }
   100% {
-    background: rgba(255, 0, 0, 0.5); } }
+    background-color: yellow; } }
 
 * {
   margin-left: auto;
   margin-right: auto; }
 
-body {
+.header {
+  height: 50px;
+  background: #F0F0F0;
+  border: 1px solid #CCC;
+  width: 960px;
+  margin: 0px auto;
   background-image: url("uncensored.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
+
+.giant {
+  margin-top: 300px;
+  padding-left: 100px; }
 
 .giantButton {
   margin-bottom: 25px;
@@ -23,8 +30,7 @@ body {
   height: 100px;
   width: 300px;
   color: black;
-  cursor: hoover;
-  animation: blink 1s steps(5, start) infinite; }
+  animation: pulse 2s infinite; }
 
 #wrapper {
   align-content: center;
