--- a/styles.scss
+++ b/styles.scss
@@ -1,28 +1,32 @@
-@keyframes blink {
-       0% {
-           background: rgba(255,0,0,0.5);
-       }
-
-       50% {
-           background: rgba(255,0,0,0);
-       }
-
-       100% {
-           background: rgba(255,0,0,0.5);
-       }
-     }
+@keyframes pulse{
+0%{
+  background-color: white;
+}
+100%{
+  background-color: yellow;
+}
+}
 
 *{
   margin-left: auto;
   margin-right: auto;
 }
-  body{
-  background-image: url('uncensored.jpg');
-  background-repeat: no-repeat;
-  background-size:cover;
+
+
+.header{
+    height:50px;
+    background:#F0F0F0;
+    border:1px solid #CCC;
+    width:960px;
+    margin:0px auto;
+    background-image: url('uncensored.jpg');
+    background-repeat: no-repeat;
+    background-size:cover;
 }
-
-
+.giant{
+  margin-top: 300px;
+  padding-left: 100px;
+}
 .giantButton{
   margin-bottom: 25px;
   font-size: 30px;
@@ -31,8 +35,8 @@
   height:100px;
   width:300px;
   color: black;
-  cursor: hoover;
-  animation: blink 1s steps(5, start) infinite;
+  animation: pulse 2s infinite;
+
 
 }
 
@@ -44,6 +48,7 @@ display:inline-block;
 padding-left: 300px;
 padding-right: 300px;
 margin-top: 0 auto;
+
 }
 input{
 margin-top: 25px;
