--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,14 @@
   0% {
     background-color: white; }
   100% {
-    background-color: yellow; } }
+    background-color: green; } }
 
 * {
   margin-left: auto;
   margin-right: auto; }
+
+body {
+  text-align: center; }
 
 .header {
   height: 50px;
@@ -19,8 +22,7 @@
   background-size: cover; }
 
 .giant {
-  margin-top: 300px;
-  padding-left: 100px; }
+  margin-top: 12%; }
 
 .giantButton {
   margin-bottom: 25px;
@@ -37,22 +39,33 @@
   width: 400px;
   height: 400px;
   display: inline-block;
-  padding-left: 300px;
+  padding-left: 100px;
   padding-right: 300px;
   margin-top: 0 auto; }
 
-input {
-  margin-top: 25px;
-  height: 25px;
-  width: 300px; }
+.input {
+  margin-top: 5%;
+  padding: 2%;
+  width: 200px;
+  text-align: center;
+  background-color: rgba(250, 0, 0, 0.5);
+  font-size: 20px;
+  border-radius: 30px; }
+
+::-webkit-input-placeholder {
+  color: black; }
 
 .smallButton {
   margin-top: 25px;
   height: 50px;
   width: 300px;
-  color: white; }
+  color: white;
+  border-radius: 30px;
+  box-shadow: 0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey;
+  background-color: rgba(250, 0, 0, 0.5); }
 
-h1 {
+.title {
+  margin-top: 15%;
   font-size: 40px;
   text-align: center;
   font-weight: bolder;
@@ -62,3 +75,43 @@ h1 {
   width: 10%;
   height: 100px;
   float: left; }
+
+li {
+  list-style-type: none;
+  text-align: left;
+  margin-left: -3%; }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  background-color: rgba(250, 250, 0, 0.5);
+  margin-top: 12%;
+  padding-left: 10%;
+  padding-right: 10%;
+  border-radius: 30px;
+  box-shadow: 0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey; }
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  background-color: rgba(250, 250, 250, 0.7);
+  border-radius: 50px;
+  height: 200px;
+  overflow: scroll; }
+
+.dropdown:hover .dropdown-content {
+  display: block; }
+
+.number {
+  margin-top: 10%;
+  padding: 2%;
+  width: 200px;
+  text-align: center;
+  background-color: rgba(250, 0, 0, 0.5);
+  font-size: 20px;
+  border-radius: 30px; }
+
+::-webkit-input-placeholder {
+  color: black; }
