--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,9 @@ input {
   height: 25px;
   width: 300px; }
 
+::-webkit-input-placeholder {
+  color: red !important; }
+
 .smallButton {
   margin-top: 25px;
   height: 50px;
