--- a/styles.scss
+++ b/styles.scss
@@ -55,6 +55,9 @@ margin-top: 25px;
 height:25px;
 width:300px;
 }
+::-webkit-input-placeholder {
+color: red !important;
+}
 .smallButton{
   margin-top: 25px;
   height:50px;
