--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,8 @@ li {
   padding-left: 10%;
   padding-right: 10%;
   border-radius: 30px;
-  box-shadow: 0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey; }
+  box-shadow: 0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey;
+  font-size: 20px; }
 
 .dropdown-content {
   display: none;
@@ -104,7 +105,7 @@ li {
 .dropdown:hover .dropdown-content {
   display: block; }
 
-.number {
+.numInsults {
   margin-top: 10%;
   padding: 2%;
   width: 200px;
