--- a/styles.scss
+++ b/styles.scss
@@ -19,7 +19,7 @@ body{
     height:50px;
     background:#F0F0F0;
     border:1px solid #CCC;
-    width:960px;
+    width:100%;
     margin:0px auto;
     background-image: url('uncensored.jpg');
     background-repeat: no-repeat;
@@ -119,12 +119,14 @@ li{
     border-radius: 50px;
     height: 200px;
     overflow: scroll;
+    left:0;
     // z-index: 1;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
 .numInsults {
 margin-top: 10%;
 padding:2%;
