--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,6 @@ body {
   font-size: 30px;
   background-color: gray;
   border-radius: 50px/50px;
-  height: 100px;
-  width: 300px;
   color: black;
   animation: pulse 2s infinite; }
 
@@ -48,7 +46,7 @@ body {
   padding: 2%;
   width: 200px;
   text-align: center;
-  background-color: rgba(250, 0, 0, 0.5);
+  background-color: rgba(250, 0, 0, 0.7);
   font-size: 20px;
   border-radius: 30px; }
 
@@ -62,10 +60,10 @@ body {
   color: white;
   border-radius: 30px;
   box-shadow: 0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey;
-  background-color: rgba(250, 0, 0, 0.5); }
+  background-color: rgba(0, 255, 0, 0.9); }
 
 .title {
-  margin-top: 15%;
+  margin-top: 10%;
   font-size: 40px;
   text-align: center;
   font-weight: bolder;
@@ -84,7 +82,7 @@ li {
 .dropdown {
   position: relative;
   display: inline-block;
-  background-color: rgba(250, 250, 0, 0.5);
+  background-color: rgba(250, 250, 0, 0.7);
   margin-top: 12%;
   padding-left: 10%;
   padding-right: 10%;
@@ -92,16 +90,18 @@ li {
   box-shadow: 0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey;
   font-size: 20px; }
 
+h3 {
+  width: 320px; }
+
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
-  background-color: rgba(250, 250, 250, 0.7);
+  width: 320px;
+  background-color: rgba(250, 250, 250, 0.9);
   border-radius: 50px;
   height: 200px;
-  overflow: scroll;
-  left: 0; }
+  overflow: scroll; }
 
 .dropdown:hover .dropdown-content {
   display: block; }
@@ -111,7 +111,7 @@ li {
   padding: 2%;
   width: 200px;
   text-align: center;
-  background-color: rgba(250, 0, 0, 0.5);
+  background-color: rgba(250, 0, 0, 0.7);
   font-size: 20px;
   border-radius: 30px; }
 
