--- a/styles.scss
+++ b/styles.scss
@@ -34,8 +34,6 @@ body{
   font-size: 30px;
   background-color: gray;
   border-radius: 50px/50px;
-  height:100px;
-  width:300px;
   color: black;
   animation: pulse 2s infinite;
 
@@ -58,7 +56,7 @@ padding:2%;
 // height:25px;
 width:200px;
 text-align: center;
-background-color:rgba(250,0,0,0.5);
+background-color:rgba(250,0,0,0.7);
 font-size: 20px;
 border-radius: 30px;
 }
@@ -74,10 +72,10 @@ border-radius: 30px;
   color:white;
   border-radius: 30px;
   box-shadow:  0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey;
-  background-color:rgba(250,0,0,0.5);
+  background-color:rgba(0,255,0,0.9);
 }
 .title{
-  margin-top: 15%;
+  margin-top: 10%;
   font-size: 40px;
   text-align: center;
   font-weight: bolder;
@@ -101,7 +99,7 @@ li{
     display: inline-block;
     // background-color: red;
     // opacity: .9;
-    background-color:rgba(250,250,0,0.5);
+    background-color:rgba(250,250,0,0.7);
     margin-top: 12%;
     padding-left: 10%;
     padding-right: 10%;
@@ -109,17 +107,19 @@ li{
     box-shadow:  0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey;
     font-size:20px;
 }
-
+h3{
+  width:320px;
+}
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
-    background-color:rgba(250,250,250,0.7);
+    width: 320px;
+    background-color:rgba(250,250,250,0.9);
     border-radius: 50px;
     height: 200px;
     overflow: scroll;
-    left:0;
+    // left:0;
     // z-index: 1;
 }
 
@@ -133,7 +133,7 @@ padding:2%;
 // height:25px;
 width:200px;
 text-align: center;
-background-color:rgba(250,0,0,0.5);
+background-color:rgba(250,0,0,0.7);
 font-size: 20px;
 border-radius: 30px;
 }
