--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-@keyframes pulse {
-  0% {
-    background-color: white; }
-  100% {
-    background-color: green; } }
+@keyframes blink {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
 
 * {
   margin-left: auto;
@@ -17,7 +17,6 @@ body {
   border: 1px solid #CCC;
   width: 100%;
   margin: 0px auto;
-  background-image: url("uncensored.jpg");
   background-repeat: no-repeat;
   background-size: cover; }
 
@@ -27,10 +26,11 @@ body {
 .giantButton {
   margin-bottom: 25px;
   font-size: 30px;
-  background-color: gray;
+  background-color: blue;
   border-radius: 50px/50px;
-  color: black;
-  animation: pulse 2s infinite; }
+  height: 100px;
+  width: 300px;
+  color: white; }
 
 #wrapper {
   align-content: center;
@@ -46,7 +46,7 @@ body {
   padding: 2%;
   width: 200px;
   text-align: center;
-  background-color: rgba(250, 0, 0, 0.7);
+  background-color: red;
   font-size: 20px;
   border-radius: 30px; }
 
@@ -60,10 +60,10 @@ body {
   color: white;
   border-radius: 30px;
   box-shadow: 0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey;
-  background-color: rgba(0, 255, 0, 0.9); }
+  background-color: rgba(250, 0, 0, 0.5); }
 
 .title {
-  margin-top: 10%;
+  margin-top: 15%;
   font-size: 40px;
   text-align: center;
   font-weight: bolder;
@@ -82,7 +82,7 @@ li {
 .dropdown {
   position: relative;
   display: inline-block;
-  background-color: rgba(250, 250, 0, 0.7);
+  background-color: red;
   margin-top: 12%;
   padding-left: 10%;
   padding-right: 10%;
@@ -90,18 +90,16 @@ li {
   box-shadow: 0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey;
   font-size: 20px; }
 
-h3 {
-  width: 320px; }
-
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  width: 320px;
-  background-color: rgba(250, 250, 250, 0.9);
+  min-width: 160px;
+  background-color: red;
   border-radius: 50px;
   height: 200px;
-  overflow: scroll; }
+  overflow: scroll;
+  left: 0; }
 
 .dropdown:hover .dropdown-content {
   display: block; }
@@ -111,9 +109,22 @@ h3 {
   padding: 2%;
   width: 200px;
   text-align: center;
-  background-color: rgba(250, 0, 0, 0.7);
+  background-color: red;
   font-size: 20px;
   border-radius: 30px; }
 
 ::-webkit-input-placeholder {
   color: black; }
+
+.info {
+  animation-duration: 5s;
+  animation-name: blink;
+  animation-iteration-count: infinite;
+  animation-direction: alternate; }
+
+h1 {
+  font-size: 50px;
+  color: blue;
+  font-weight: 600;
+  font-style: italic;
+  font-family: sans-serif; }
