--- a/styles.scss
+++ b/styles.scss
@@ -1,12 +1,11 @@
-@keyframes pulse{
-0%{
-  background-color: white;
-}
-100%{
-  background-color: green;
-}
-}
-
+@keyframes blink {
+   from {
+      opacity: 1;
+   }
+   to {
+      opacity: 0;
+   }
+ }
 *{
   margin-left: auto;
   margin-right: auto;
@@ -21,7 +20,6 @@ body{
     border:1px solid #CCC;
     width:100%;
     margin:0px auto;
-    background-image: url('uncensored.jpg');
     background-repeat: no-repeat;
     background-size:cover;
 }
@@ -32,10 +30,12 @@ body{
 .giantButton{
   margin-bottom: 25px;
   font-size: 30px;
-  background-color: gray;
+  background-color: blue;
   border-radius: 50px/50px;
-  color: black;
-  animation: pulse 2s infinite;
+  height:100px;
+  width:300px;
+  color: white;
+
 
 
 }
@@ -56,7 +56,7 @@ padding:2%;
 // height:25px;
 width:200px;
 text-align: center;
-background-color:rgba(250,0,0,0.7);
+background-color:red;
 font-size: 20px;
 border-radius: 30px;
 }
@@ -72,10 +72,10 @@ border-radius: 30px;
   color:white;
   border-radius: 30px;
   box-shadow:  0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey;
-  background-color:rgba(0,255,0,0.9);
+  background-color:rgba(250,0,0,0.5);
 }
 .title{
-  margin-top: 10%;
+  margin-top: 15%;
   font-size: 40px;
   text-align: center;
   font-weight: bolder;
@@ -99,7 +99,7 @@ li{
     display: inline-block;
     // background-color: red;
     // opacity: .9;
-    background-color:rgba(250,250,0,0.7);
+    background-color:red;
     margin-top: 12%;
     padding-left: 10%;
     padding-right: 10%;
@@ -107,19 +107,17 @@ li{
     box-shadow:  0 2px grey, -1px 0 lightgrey, 0 -1px lightgrey, 2px 0 grey;
     font-size:20px;
 }
-h3{
-  width:320px;
-}
+
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    width: 320px;
-    background-color:rgba(250,250,250,0.9);
+    min-width: 160px;
+    background-color:red;
     border-radius: 50px;
     height: 200px;
     overflow: scroll;
-    // left:0;
+    left:0;
     // z-index: 1;
 }
 
@@ -133,10 +131,23 @@ padding:2%;
 // height:25px;
 width:200px;
 text-align: center;
-background-color:rgba(250,0,0,0.7);
+background-color:red;
 font-size: 20px;
 border-radius: 30px;
 }
 ::-webkit-input-placeholder{
   color:black;
+}
+.info{
+animation-duration: 5s;
+ animation-name: blink;
+ animation-iteration-count: infinite;
+ animation-direction: alternate;
+}
+h1{
+  font-size: 50px;
+  color:blue;
+  font-weight: 600;
+  font-style: italic;
+  font-family: sans-serif;
 }
